--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "pretty-quick --ignore-path .gitignore",
+    "prettier:all": "prettier --write . --ignore-path .gitignore"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.32.1",
     "@tanstack/react-query-devtools": "^5.32.1",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.11",
-    "eslint-config-prettier": "^9.1.0",
     "formik": "^2.4.6",
-    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
@@ -33,9 +33,16 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "prettier": "^3.2.5",
+    "pretty-quick": "^4.0.0",
+    "simple-git-hooks": "^2.11.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npm run prettier --staged"
   }
 }
